--- a/styles.css
+++ b/styles.css
@@ -232,4 +232,10 @@ footer {
     h1 {
         font-size: 2rem;
     }
+    .info-card {
+    background: white;
+    border-radius: 15px;
+    padding: 30px 35px 30px 30px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+}
 }
